--- a/po/nb.po
+++ b/po/nb.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good 1.6.0\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2015-09-25 22:54+0200\n"
+"POT-Creation-Date: 2015-12-24 13:17+0100\n"
 "PO-Revision-Date: 2015-12-22 21:12+0100\n"
 "Last-Translator: Johnny A. Solbu <johnny@solbu.net>\n"
 "Language-Team: Norwegian Bokmaal <i18n-nb@lister.ping.uio.no>\n"
@@ -18,485 +18,403 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.6.9\n"
 
-#: ext/jack/gstjackaudiosink.c:356 ext/jack/gstjackaudiosrc.c:364
 msgid "Jack server not found"
 msgstr "Jack-server ikke funnet"
 
-#: ext/jpeg/gstjpegdec.c:925 ext/jpeg/gstjpegdec.c:1178
-#: ext/jpeg/gstjpegdec.c:1190 ext/jpeg/gstjpegdec.c:1219
-#: ext/jpeg/gstjpegdec.c:1228 ext/jpeg/gstjpegdec.c:1237
-#: ext/jpeg/gstjpegdec.c:1245
 msgid "Failed to decode JPEG image"
 msgstr "Klarte ikke å dekode JPEG-bilde"
 
 #. TRANSLATORS: 'song title' by 'artist name'
-#: ext/pulse/pulsesink.c:3133
 #, c-format
 msgid "'%s' by '%s'"
 msgstr "«%s» av «%s»"
 
-#: ext/shout2/gstshout2.c:567
 msgid "Could not connect to server"
 msgstr "Kunne ikke koble til tjener."
 
-#: ext/soup/gstsouphttpsrc.c:911
 msgid "No URL set."
 msgstr "Ingen URL satt."
 
-#: ext/soup/gstsouphttpsrc.c:1270
 msgid "Server does not support seeking."
 msgstr "Tjener støtter ikke søking."
 
-#: ext/soup/gstsouphttpsrc.c:1545
 msgid "Could not resolve server name."
 msgstr "Kunne ikke slå opp navn på tjener."
 
-#: ext/soup/gstsouphttpsrc.c:1551
 msgid "Could not establish connection to server."
 msgstr "Kunne ikke etablere tilkobling til tjener."
 
-#: ext/soup/gstsouphttpsrc.c:1556
 msgid "Secure connection setup failed."
 msgstr "Oppsett av sikker tilkobling feilet."
 
-#: ext/soup/gstsouphttpsrc.c:1566
-msgid "A network error occurred, or the server closed the connection unexpectedly."
+msgid ""
+"A network error occurred, or the server closed the connection unexpectedly."
 msgstr "En nettverksfeil oppstod, eller tjeneren lukket uventet tilkoblingen."
 
-#: ext/soup/gstsouphttpsrc.c:1573
 msgid "Server sent bad data."
 msgstr "Tjener sendte ugyldige data."
 
-#: gst/avi/gstavidemux.c:5679
 msgid "Internal data stream error."
 msgstr "Intern feil i datastrøm."
 
-#: gst/avi/gstavimux.c:1819
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "Ingen eller ugyldig inndatalyd, AVI-strømmen vil bli skadet."
 
-#: gst/isomp4/qtdemux.c:635 gst/isomp4/qtdemux.c:639
 msgid "This file contains no playable streams."
 msgstr "Filen inneholder ingen spillbare strømmer."
 
-#: gst/isomp4/qtdemux.c:685 gst/isomp4/qtdemux.c:5572
-#: gst/isomp4/qtdemux.c:5639 gst/isomp4/qtdemux.c:5878
 msgid "This file is invalid and cannot be played."
 msgstr "Filen er ugyldig og kan ikke spilles."
 
-#: gst/isomp4/qtdemux.c:2433
 msgid "Cannot play stream because it is encrypted with PlayReady DRM."
 msgstr "Kan ikke spille av strømmen fordi den er kryptert med PlayReady DRM."
 
-#: gst/isomp4/qtdemux.c:3498 gst/isomp4/qtdemux.c:6595
-#: gst/isomp4/qtdemux.c:6602 gst/isomp4/qtdemux.c:7376
-#: gst/isomp4/qtdemux.c:7805 gst/isomp4/qtdemux.c:7812
-#: gst/isomp4/qtdemux.c:10091
 msgid "This file is corrupt and cannot be played."
 msgstr "Filen er skadet og kan ikke spilles."
 
-#: gst/isomp4/qtdemux.c:3740
 msgid "Invalid atom size."
 msgstr "Ugyldig atomstørrelse."
 
-#: gst/isomp4/qtdemux.c:3818
 msgid "This file is incomplete and cannot be played."
 msgstr "Filen er ufullstendig og kan ikke spilles."
 
-#: gst/isomp4/qtdemux.c:8735
 msgid "The video in this file might not play correctly."
 msgstr "Videoen i denne filen spilles kanskje ikke av korrekt."
 
-#: gst/isomp4/qtdemux.c:10132
 #, c-format
 msgid "This file contains too many streams. Only playing first %d"
 msgstr "Filen inneholder for mange strømmer. Spiller bare første %d"
 
-#: gst/multifile/gstsplitmuxsrc.c:532 gst/wavparse/gstwavparse.c:2248
 msgid "Internal data flow error."
 msgstr "Intern dataflytfeil."
 
-#: gst/rtsp/gstrtspsrc.c:6894
-msgid "No supported stream was found. You might need to install a GStreamer RTSP extension plugin for Real media streams."
-msgstr "Ingen støttet strøm ble funnet. Du må kanskje installere en GStreamer RTSP utvidelsesprogramtillegg for Real mediestrømmer."
+msgid ""
+"No supported stream was found. You might need to install a GStreamer RTSP "
+"extension plugin for Real media streams."
+msgstr ""
+"Ingen støttet strøm ble funnet. Du må kanskje installere en GStreamer RTSP "
+"utvidelsesprogramtillegg for Real mediestrømmer."
 
-#: gst/rtsp/gstrtspsrc.c:6899
-msgid "No supported stream was found. You might need to allow more transport protocols or may otherwise be missing the right GStreamer RTSP extension plugin."
-msgstr "Ingen støttet strøm ble funnet. Du må kanskje tillate flere transportprotokoller eller den kan mangle den rette GStreamer RTSP-utvidelsestillegget."
+msgid ""
+"No supported stream was found. You might need to allow more transport "
+"protocols or may otherwise be missing the right GStreamer RTSP extension "
+"plugin."
+msgstr ""
+"Ingen støttet strøm ble funnet. Du må kanskje tillate flere "
+"transportprotokoller eller den kan mangle den rette GStreamer RTSP-"
+"utvidelsestillegget."
 
-#: sys/oss4/oss4-sink.c:493 sys/oss4/oss4-source.c:358
-#: sys/oss/gstosssink.c:384
-msgid "Could not open audio device for playback. Device is being used by another application."
-msgstr "Kunne ikke åpne lydenheten for avspilling. Enheten brukes av et annet program."
+msgid ""
+"Could not open audio device for playback. Device is being used by another "
+"application."
+msgstr ""
+"Kunne ikke åpne lydenheten for avspilling. Enheten brukes av et annet "
+"program."
 
-#: sys/oss4/oss4-sink.c:503 sys/oss4/oss4-source.c:368
-#: sys/oss/gstosssink.c:391
-msgid "Could not open audio device for playback. You don't have permission to open the device."
-msgstr "Kunne ikke åpne lydenheten for avspilling. Du har ikke tillatelse til å åpne enheten."
+msgid ""
+"Could not open audio device for playback. You don't have permission to open "
+"the device."
+msgstr ""
+"Kunne ikke åpne lydenheten for avspilling. Du har ikke tillatelse til å åpne "
+"enheten."
 
-#: sys/oss4/oss4-sink.c:514 sys/oss4/oss4-source.c:379
-#: sys/oss/gstosssink.c:399
 msgid "Could not open audio device for playback."
 msgstr "Kunne ikke åpne lydenhet for avspilling."
 
-#: sys/oss4/oss4-sink.c:523 sys/oss4/oss4-source.c:389
-msgid "Could not open audio device for playback. This version of the Open Sound System is not supported by this element."
-msgstr "Kunne ikke åpne lydenheten for avspilling. Denne versjonen av «Open Sound System» støttes ikke av dette elementet."
+msgid ""
+"Could not open audio device for playback. This version of the Open Sound "
+"System is not supported by this element."
+msgstr ""
+"Kunne ikke åpne lydenheten for avspilling. Denne versjonen av «Open Sound "
+"System» støttes ikke av dette elementet."
 
-#: sys/oss4/oss4-sink.c:646
 msgid "Playback is not supported by this audio device."
 msgstr "Avspilling støttes ikke av denne lydenheten."
 
-#: sys/oss4/oss4-sink.c:653
 msgid "Audio playback error."
 msgstr "Lydavspillingsfeil"
 
-#: sys/oss4/oss4-source.c:503
 msgid "Recording is not supported by this audio device."
 msgstr "Opptak støttes ikke av denne lydenheten."
 
-#: sys/oss4/oss4-source.c:510
 msgid "Error recording from audio device."
 msgstr "Feil ved opptak fra lydenheten."
 
-#: sys/oss/gstosssrc.c:377
-msgid "Could not open audio device for recording. You don't have permission to open the device."
-msgstr "Kunne ikke åpne lydenheten for opptak. Du har ikke tillatelse til å åpne enheten."
+msgid ""
+"Could not open audio device for recording. You don't have permission to open "
+"the device."
+msgstr ""
+"Kunne ikke åpne lydenheten for opptak. Du har ikke tillatelse til å åpne "
+"enheten."
 
-#: sys/oss/gstosssrc.c:385
 msgid "Could not open audio device for recording."
 msgstr "Kunne ikke åpne lydenhet for opptak."
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:109
 msgid "Record Source"
 msgstr "Opptakskilde"
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:120
 msgid "Microphone"
 msgstr "Mikrofon"
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:121
 msgid "Line In"
 msgstr "Linje inn"
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:122
 msgid "Internal CD"
 msgstr "Intern CD"
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:123
 msgid "SPDIF In"
 msgstr "SPDIF Inn"
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:124
 msgid "AUX 1 In"
 msgstr "AUX 1 inn"
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:125
 msgid "AUX 2 In"
 msgstr "AUX 2 inn"
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:126
 msgid "Codec Loopback"
 msgstr "Kodek-Loopback"
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:127
 msgid "SunVTS Loopback"
 msgstr "SunVTS-Loopback"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:69
 msgid "Volume"
 msgstr "Volum"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:70
 msgid "Gain"
 msgstr "Styrke"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:71
 msgid "Monitor"
 msgstr "Monitor"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:72
 msgid "Built-in Speaker"
 msgstr "Innebygget høyttaler"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:73
 msgid "Headphone"
 msgstr "Hodetelefon"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:74
 msgid "Line Out"
 msgstr "Linje ut"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:75
 msgid "SPDIF Out"
 msgstr "SPDIF ut"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:76
 msgid "AUX 1 Out"
 msgstr "AUX 1 ut"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:77
 msgid "AUX 2 Out"
 msgstr "AUX 2 ut"
 
-#: sys/v4l2/gstv4l2bufferpool.c:1672
 #, c-format
 msgid "Error reading %d bytes from device '%s'."
 msgstr "Feil ved lesing av% d bytes fra enheten '% s»."
 
-#: sys/v4l2/gstv4l2object.c:1085
 #, c-format
 msgid "Failed to enumerate possible video formats device '%s' can work with"
 msgstr "Kunne ikke spesifisere mulige videoformater enhet «%s» kan arbeide med"
 
-#: sys/v4l2/gstv4l2object.c:2577
 #, c-format
 msgid "Could not map buffers from device '%s'"
 msgstr "Kunne ikke tilordne buffere fra enheten «%s»."
 
-#: sys/v4l2/gstv4l2object.c:2585
 #, c-format
 msgid "The driver of device '%s' does not support the IO method %d"
 msgstr "Driveren av enheten «%s» støtter ikke IO metoden %d"
 
-#: sys/v4l2/gstv4l2object.c:2592
 #, c-format
 msgid "The driver of device '%s' does not support any known IO method."
 msgstr "Driveren av enheten «%s» støtter ikke noen kjente IO-metoder."
 
-#: sys/v4l2/gstv4l2object.c:3214 sys/v4l2/gstv4l2object.c:3225
 #, c-format
 msgid "Device '%s' is busy"
 msgstr "Enheten «%s» er opptatt"
 
-#: sys/v4l2/gstv4l2object.c:3231 sys/v4l2/gstv4l2object.c:3243
 #, c-format
 msgid "Device '%s' cannot capture at %dx%d"
 msgstr "Enhet «%s» kan ikke fange ved %dx%d"
 
-#: sys/v4l2/gstv4l2object.c:3254
 #, c-format
 msgid "Device '%s' cannot capture in the specified format"
 msgstr "Enhet «%s» kan ikke fange i det angitte formatet"
 
-#: sys/v4l2/gstv4l2object.c:3267
 #, c-format
 msgid "Device '%s' does support non-contiguous planes"
 msgstr "Enhet «%s» støtter ikke ikke-sammenhengende plan"
 
-#: sys/v4l2/gstv4l2object.c:3278
 #, c-format
 msgid "Could not get parameters on device '%s'"
 msgstr "Kunne ikke få parametere på enheten «%s»."
 
-#: sys/v4l2/gstv4l2object.c:3286
 msgid "Video device did not accept new frame rate setting."
 msgstr "Videoenheten aksepterte ikke ny bildefrekvensinnstilling."
 
-#: sys/v4l2/gstv4l2object.c:3391
 msgid "Video device did not provide output format."
 msgstr "Videoenhet tilbød ikke utdataformat."
 
-#: sys/v4l2/gstv4l2object.c:3397
 msgid "Video device returned invalid dimensions."
 msgstr "Videoenhet returnerte ugyldige dimensjoner."
 
-#: sys/v4l2/gstv4l2object.c:3405
 msgid "Video devices uses an unsupported interlacing method."
 msgstr "Video-enheter bruker en ustøttet linjeflettingsmetode."
 
-#: sys/v4l2/gstv4l2object.c:3412
 msgid "Video devices uses an unsupported pixel format."
 msgstr "Videoenhet bruker et ustøttet pikselformat."
 
-#: sys/v4l2/gstv4l2object.c:3824
 msgid "Failed to configure internal buffer pool."
 msgstr "Klarte ikke å konfigurere internt bufferområde"
 
-#: sys/v4l2/gstv4l2object.c:3830
 msgid "Video device did not suggest any buffer size."
 msgstr "Videoenhet foreslo ikke noen bufferstørrelse."
 
-#: sys/v4l2/gstv4l2object.c:3845
 msgid "No downstream pool to import from."
 msgstr "Ingen nedstrømsområde å importere fra."
 
-#: sys/v4l2/gstv4l2radio.c:138
 #, c-format
 msgid "Failed to get settings of tuner %d on device '%s'."
 msgstr "Kunne ikke hente innstillingene fra mottakeren %d på enheten «%s»."
 
-#: sys/v4l2/gstv4l2radio.c:145
 #, c-format
 msgid "Error getting capabilities for device '%s'."
 msgstr "Feil ved henting av funksjoner for enheten «%s»."
 
-#: sys/v4l2/gstv4l2radio.c:152
 #, c-format
 msgid "Device '%s' is not a tuner."
 msgstr "Enheten «%s» er ikke en tuner."
 
-#: sys/v4l2/gstv4l2radio.c:179
 #, c-format
 msgid "Failed to get radio input on device '%s'. "
 msgstr "Mislyktes i å få radio-inndata på enheten «%s»."
 
-#: sys/v4l2/gstv4l2radio.c:202 sys/v4l2/v4l2_calls.c:1067
 #, c-format
 msgid "Failed to set input %d on device %s."
 msgstr "Klarte ikke å sette inngang %d på enhet %s."
 
-#: sys/v4l2/gstv4l2radio.c:236
 #, c-format
 msgid "Failed to change mute state for device '%s'."
 msgstr "Klarte ikke å endre dempe-modus for enheten «%s»."
 
-#: sys/v4l2/gstv4l2sink.c:615
 msgid "Failed to allocated required memory."
 msgstr "Kunne ikke tildele nødvendige minne."
 
-#: sys/v4l2/gstv4l2src.c:510 sys/v4l2/gstv4l2videodec.c:581
 msgid "Failed to allocate required memory."
 msgstr "Kunne ikke tildele nødvendige minne."
 
-#: sys/v4l2/gstv4l2transform.c:143
 #, c-format
 msgid "Converter on device %s has no supported input format"
 msgstr "Konverter på enhet «%s» har ingen støttede inndataformat"
 
-#: sys/v4l2/gstv4l2transform.c:150
 #, c-format
 msgid "Converter on device %s has no supported output format"
 msgstr "Konverter på enhet «%s» har ingen støttede utdataformat"
 
-#: sys/v4l2/gstv4l2videodec.c:141
 #, c-format
 msgid "Encoder on device %s has no supported input format"
 msgstr "Enkoder på enhet «%s» har ingen støttede inndataformat"
 
-#: sys/v4l2/gstv4l2videodec.c:148
 #, c-format
 msgid "Encoder on device %s has no supported output format"
 msgstr "Enkoder på enhet «%s» har ingen støttede utdataformat"
 
-#: sys/v4l2/gstv4l2videodec.c:595
 msgid "Failed to start decoding thread."
 msgstr "Klarte ikke å starte dekoding av tråden."
 
-#: sys/v4l2/gstv4l2videodec.c:603
 msgid "Failed to process frame."
 msgstr "Kunne ikke behandle ramme."
 
-#: sys/v4l2/v4l2_calls.c:89
 #, c-format
-msgid "Error getting capabilities for device '%s': It isn't a v4l2 driver. Check if it is a v4l1 driver."
-msgstr "Feil ved henting av evner for enheten «%s»: Det er ikke en v4l2 driver. Sjekk om det er en v4l1 driver."
+msgid ""
+"Error getting capabilities for device '%s': It isn't a v4l2 driver. Check if "
+"it is a v4l1 driver."
+msgstr ""
+"Feil ved henting av evner for enheten «%s»: Det er ikke en v4l2 driver. "
+"Sjekk om det er en v4l1 driver."
 
-#: sys/v4l2/v4l2_calls.c:153
 #, c-format
 msgid "Failed to query attributes of input %d in device %s"
 msgstr "Feil ved attributtspørring av inndata %d på enhet %s"
 
-#: sys/v4l2/v4l2_calls.c:184
 #, c-format
 msgid "Failed to get setting of tuner %d on device '%s'."
 msgstr "Kunne ikke hente innstillingen av mottakeren %d på enheten «%s»."
 
-#: sys/v4l2/v4l2_calls.c:232
 #, c-format
 msgid "Failed to query norm on device '%s'."
 msgstr "Feil ved norm-spørring på enhet %s."
 
-#: sys/v4l2/v4l2_calls.c:411
 #, c-format
 msgid "Failed getting controls attributes on device '%s'."
 msgstr "Kunne ikke å få inn kontrollattributter på enhet «%s»."
 
-#: sys/v4l2/v4l2_calls.c:605
 #, c-format
 msgid "Cannot identify device '%s'."
 msgstr "Kan ikke identifisere enhet «%s»."
 
-#: sys/v4l2/v4l2_calls.c:612
 #, c-format
 msgid "This isn't a device '%s'."
 msgstr "Dette er ikke en enhet «%s»."
 
-#: sys/v4l2/v4l2_calls.c:619
 #, c-format
 msgid "Could not open device '%s' for reading and writing."
 msgstr "Kunne ikke åpne enhet «%s» for lesing og skriving."
 
-#: sys/v4l2/v4l2_calls.c:626
 #, c-format
 msgid "Device '%s' is not a capture device."
 msgstr "Enhet «%s» kan ikke fange data."
 
-#: sys/v4l2/v4l2_calls.c:634
 #, c-format
 msgid "Device '%s' is not a output device."
 msgstr "Enhet «%s» er ikke en utgangsenhet."
 
-#: sys/v4l2/v4l2_calls.c:642
 #, c-format
 msgid "Device '%s' is not a M2M device."
 msgstr "Enheten «%s» er ikke en M2M-enhet."
 
-#: sys/v4l2/v4l2_calls.c:693
 #, c-format
 msgid "Could not dup device '%s' for reading and writing."
 msgstr "Kunne ikke åpne enhet «%s» for lesing og skriving."
 
-#: sys/v4l2/v4l2_calls.c:777
 #, c-format
 msgid "Failed to set norm for device '%s'."
 msgstr "Kunne ikke sette normen for enhet «%s»."
 
-#: sys/v4l2/v4l2_calls.c:815
 #, c-format
 msgid "Failed to get current tuner frequency for device '%s'."
 msgstr "Klarte ikke å få gjeldende mottakerfrekvens for enheten «%s»."
 
-#: sys/v4l2/v4l2_calls.c:857
 #, c-format
 msgid "Failed to set current tuner frequency for device '%s' to %lu Hz."
-msgstr "Klarte ikke å sette gjeldende mottakerfrekvens for enheten «%s» til %lu Hz."
+msgstr ""
+"Klarte ikke å sette gjeldende mottakerfrekvens for enheten «%s» til %lu Hz."
 
-#: sys/v4l2/v4l2_calls.c:891
 #, c-format
 msgid "Failed to get signal strength for device '%s'."
 msgstr "Klarte ikke å innhente signalstyrken for enheten «%s»."
 
-#: sys/v4l2/v4l2_calls.c:927
 #, c-format
 msgid "Failed to get value for control %d on device '%s'."
 msgstr "Kunne ikke hente verdi for kontroll %d på enheten «%s»."
 
-#: sys/v4l2/v4l2_calls.c:962
 #, c-format
 msgid "Failed to set value %d for control %d on device '%s'."
 msgstr "Klarte ikke å sette verdi %d for kontroll %d på enheten «%s»."
 
-#: sys/v4l2/v4l2_calls.c:1042
 #, c-format
 msgid "Failed to get current input on device '%s'. May be it is a radio device"
-msgstr "Kunne ikke hente gjeldende inndata på enheten «%s». Kanskje det er en radioenhet"
+msgstr ""
+"Kunne ikke hente gjeldende inndata på enheten «%s». Kanskje det er en "
+"radioenhet"
 
-#: sys/v4l2/v4l2_calls.c:1099
 #, c-format
-msgid "Failed to get current output on device '%s'. May be it is a radio device"
+msgid ""
+"Failed to get current output on device '%s'. May be it is a radio device"
 msgstr "Kunne ikke hente utdata fra enheten «%s». Kanskje det er en radioenhet"
 
-#: sys/v4l2/v4l2_calls.c:1124
 #, c-format
 msgid "Failed to set output %d on device %s."
 msgstr "Klarte ikke å sette utgang %d på enhet %s."
 
-#: sys/ximage/gstximagesrc.c:828
 msgid "Changing resolution at runtime is not yet supported."
 msgstr "Endring av oppløsning under kjøring støttes ikke enda."
 
-#: sys/ximage/gstximagesrc.c:842
 msgid "Cannot operate without a clock"
 msgstr "Kan ikke operere uten en klokke"
 
@@ -578,8 +496,12 @@ msgstr "Kan ikke operere uten en klokke"
 #~ msgid "Could not open audio device for mixer control handling."
 #~ msgstr "Kunne ikke åpne lydenheten for mikserkontrollhåndtering."
 
-#~ msgid "Could not open audio device for mixer control handling. This version of the Open Sound System is not supported by this element."
-#~ msgstr "Kunne ikke åpne lydenheten for mikserkontrollhåndtering. Denne versjonen av «Open Sound System» støttes ikke av dette elementet."
+#~ msgid ""
+#~ "Could not open audio device for mixer control handling. This version of "
+#~ "the Open Sound System is not supported by this element."
+#~ msgstr ""
+#~ "Kunne ikke åpne lydenheten for mikserkontrollhåndtering. Denne versjonen "
+#~ "av «Open Sound System» støttes ikke av dette elementet."
 
 #~ msgid "Master"
 #~ msgstr "Hovedvolum"
