--- a/po/sr.po
+++ b/po/sr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-good-1.6.0\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2015-09-25 22:54+0200\n"
+"POT-Creation-Date: 2015-12-24 13:17+0100\n"
 "PO-Revision-Date: 2015-12-24 11:39+0200\n"
 "Last-Translator: Мирослав Николић <miroslavnikolic@rocketmail.com>\n"
 "Language-Team: Serbian <(nothing)>\n"
@@ -15,487 +15,410 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
-#: ext/jack/gstjackaudiosink.c:356 ext/jack/gstjackaudiosrc.c:364
 msgid "Jack server not found"
 msgstr "Нисам пронашао сервер утичнице"
 
-#: ext/jpeg/gstjpegdec.c:925 ext/jpeg/gstjpegdec.c:1178
-#: ext/jpeg/gstjpegdec.c:1190 ext/jpeg/gstjpegdec.c:1219
-#: ext/jpeg/gstjpegdec.c:1228 ext/jpeg/gstjpegdec.c:1237
-#: ext/jpeg/gstjpegdec.c:1245
 msgid "Failed to decode JPEG image"
 msgstr "Нисам успео да декодирам ЈПЕГ слику"
 
 #. TRANSLATORS: 'song title' by 'artist name'
-#: ext/pulse/pulsesink.c:3133
 #, c-format
 msgid "'%s' by '%s'"
 msgstr "„%s“ изводи „%s“"
 
-#: ext/shout2/gstshout2.c:567
 msgid "Could not connect to server"
 msgstr "Не могу да се повежем са сервером"
 
-#: ext/soup/gstsouphttpsrc.c:911
 msgid "No URL set."
 msgstr "Није подешена адреса."
 
-#: ext/soup/gstsouphttpsrc.c:1270
 msgid "Server does not support seeking."
 msgstr "Сервер не подржава позиционирање."
 
-#: ext/soup/gstsouphttpsrc.c:1545
 msgid "Could not resolve server name."
 msgstr "Не могу да решим назив сервера."
 
-#: ext/soup/gstsouphttpsrc.c:1551
 msgid "Could not establish connection to server."
 msgstr "Не могу да успоставим везу са сервером."
 
-#: ext/soup/gstsouphttpsrc.c:1556
 msgid "Secure connection setup failed."
 msgstr "Подешавање безбедне везе није успело."
 
-#: ext/soup/gstsouphttpsrc.c:1566
-msgid "A network error occurred, or the server closed the connection unexpectedly."
+msgid ""
+"A network error occurred, or the server closed the connection unexpectedly."
 msgstr "Дошло је до грешке на мрежи, или је сервер неочекивано затворио везу."
 
-#: ext/soup/gstsouphttpsrc.c:1573
 msgid "Server sent bad data."
 msgstr "Сервер је послао лоше податке."
 
-#: gst/avi/gstavidemux.c:5679
 msgid "Internal data stream error."
 msgstr "Унутрашња грешка тока података."
 
-#: gst/avi/gstavimux.c:1819
 msgid "No or invalid input audio, AVI stream will be corrupt."
 msgstr "Улазног звука нема или је неисправан, АВИ ток ће бити оштећен."
 
-#: gst/isomp4/qtdemux.c:635 gst/isomp4/qtdemux.c:639
 msgid "This file contains no playable streams."
 msgstr "Ова датотека не садржи токове за пуштање."
 
-#: gst/isomp4/qtdemux.c:685 gst/isomp4/qtdemux.c:5572
-#: gst/isomp4/qtdemux.c:5639 gst/isomp4/qtdemux.c:5878
 msgid "This file is invalid and cannot be played."
 msgstr "Ова датотека је неисправна и не може бити пуштена."
 
-#: gst/isomp4/qtdemux.c:2433
 msgid "Cannot play stream because it is encrypted with PlayReady DRM."
-msgstr "Не могу да пустим ток зато што је шифрован УДП-ом „Спреман за пуштање“."
+msgstr ""
+"Не могу да пустим ток зато што је шифрован УДП-ом „Спреман за пуштање“."
 
-#: gst/isomp4/qtdemux.c:3498 gst/isomp4/qtdemux.c:6595
-#: gst/isomp4/qtdemux.c:6602 gst/isomp4/qtdemux.c:7376
-#: gst/isomp4/qtdemux.c:7805 gst/isomp4/qtdemux.c:7812
-#: gst/isomp4/qtdemux.c:10091
 msgid "This file is corrupt and cannot be played."
 msgstr "Ова датотека је оштећена и не може бити пуштена."
 
-#: gst/isomp4/qtdemux.c:3740
 msgid "Invalid atom size."
 msgstr "Неисправна величина атома."
 
-#: gst/isomp4/qtdemux.c:3818
 msgid "This file is incomplete and cannot be played."
 msgstr "Ова датотека је непотпуна и не може бити пуштена."
 
-#: gst/isomp4/qtdemux.c:8735
 msgid "The video in this file might not play correctly."
 msgstr "Видео у овој датотеци можда неће бити пуштен исправно."
 
-#: gst/isomp4/qtdemux.c:10132
 #, c-format
 msgid "This file contains too many streams. Only playing first %d"
 msgstr "Ова датотека садржи превише токова. Пуштам само први %d"
 
-#: gst/multifile/gstsplitmuxsrc.c:532 gst/wavparse/gstwavparse.c:2248
 msgid "Internal data flow error."
 msgstr "Унутрaшња грешка протока података."
 
-#: gst/rtsp/gstrtspsrc.c:6894
-msgid "No supported stream was found. You might need to install a GStreamer RTSP extension plugin for Real media streams."
-msgstr "Није пронађен ниједан подржани ток. Можда ћете морати да инсталирате прикључак РТСП проширења Гстримера за токове Стварног медија."
+msgid ""
+"No supported stream was found. You might need to install a GStreamer RTSP "
+"extension plugin for Real media streams."
+msgstr ""
+"Није пронађен ниједан подржани ток. Можда ћете морати да инсталирате "
+"прикључак РТСП проширења Гстримера за токове Стварног медија."
 
-#: gst/rtsp/gstrtspsrc.c:6899
-msgid "No supported stream was found. You might need to allow more transport protocols or may otherwise be missing the right GStreamer RTSP extension plugin."
-msgstr "Није пронађен ниједан подржани ток. Можда ћете морати да омогућите више протокола преноса или можда на неки други начин недостаје прави прикључак РТСП проширења ГСтримера."
+msgid ""
+"No supported stream was found. You might need to allow more transport "
+"protocols or may otherwise be missing the right GStreamer RTSP extension "
+"plugin."
+msgstr ""
+"Није пронађен ниједан подржани ток. Можда ћете морати да омогућите више "
+"протокола преноса или можда на неки други начин недостаје прави прикључак "
+"РТСП проширења ГСтримера."
 
-#: sys/oss4/oss4-sink.c:493 sys/oss4/oss4-source.c:358
-#: sys/oss/gstosssink.c:384
-msgid "Could not open audio device for playback. Device is being used by another application."
-msgstr "Не могу да покренем звучни уређај ради пуштања. Уређај користи нека друга апликација."
+msgid ""
+"Could not open audio device for playback. Device is being used by another "
+"application."
+msgstr ""
+"Не могу да покренем звучни уређај ради пуштања. Уређај користи нека друга "
+"апликација."
 
-#: sys/oss4/oss4-sink.c:503 sys/oss4/oss4-source.c:368
-#: sys/oss/gstosssink.c:391
-msgid "Could not open audio device for playback. You don't have permission to open the device."
-msgstr "Не могу да покренем аудио уређај ради пуштања. Немате овлашћење за покретање уређаја."
+msgid ""
+"Could not open audio device for playback. You don't have permission to open "
+"the device."
+msgstr ""
+"Не могу да покренем аудио уређај ради пуштања. Немате овлашћење за покретање "
+"уређаја."
 
-#: sys/oss4/oss4-sink.c:514 sys/oss4/oss4-source.c:379
-#: sys/oss/gstosssink.c:399
 msgid "Could not open audio device for playback."
 msgstr "Не могу да покренем звучни уређај ради пуштања."
 
-#: sys/oss4/oss4-sink.c:523 sys/oss4/oss4-source.c:389
-msgid "Could not open audio device for playback. This version of the Open Sound System is not supported by this element."
-msgstr "Не могу да покренем звучни уређај ради пуштања. Ово издање система отвореног звука није подржано овим елементом."
+msgid ""
+"Could not open audio device for playback. This version of the Open Sound "
+"System is not supported by this element."
+msgstr ""
+"Не могу да покренем звучни уређај ради пуштања. Ово издање система отвореног "
+"звука није подржано овим елементом."
 
-#: sys/oss4/oss4-sink.c:646
 msgid "Playback is not supported by this audio device."
 msgstr "Пуштање није подржано од стране овог звучног уређаја."
 
-#: sys/oss4/oss4-sink.c:653
 msgid "Audio playback error."
 msgstr "Грешка приликом пуштања звука."
 
-#: sys/oss4/oss4-source.c:503
 msgid "Recording is not supported by this audio device."
 msgstr "Снимање није подржано од стране овог звучног уређаја."
 
-#: sys/oss4/oss4-source.c:510
 msgid "Error recording from audio device."
 msgstr "Грешка приликом снимања са звучног уређаја."
 
-#: sys/oss/gstosssrc.c:377
-msgid "Could not open audio device for recording. You don't have permission to open the device."
-msgstr "Не могу да покренем аудио уређај ради снимања. Немате овлашћење за покретање уређаја."
+msgid ""
+"Could not open audio device for recording. You don't have permission to open "
+"the device."
+msgstr ""
+"Не могу да покренем аудио уређај ради снимања. Немате овлашћење за покретање "
+"уређаја."
 
-#: sys/oss/gstosssrc.c:385
 msgid "Could not open audio device for recording."
 msgstr "Не могу да покренем звучни уређај ради снимања."
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:109
 msgid "Record Source"
 msgstr "Извор снимања"
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:120
 msgid "Microphone"
 msgstr "Микрофон"
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:121
 msgid "Line In"
 msgstr "Линијски улаз"
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:122
 msgid "Internal CD"
 msgstr "Унутрашњи ЦД"
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:123
 msgid "SPDIF In"
 msgstr "СПДИФ улаз"
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:124
 msgid "AUX 1 In"
 msgstr "АУХ 1 улаз"
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:125
 msgid "AUX 2 In"
 msgstr "АУХ 2 улаз"
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:126
 msgid "Codec Loopback"
 msgstr "Повратна петља кодека"
 
-#: sys/sunaudio/gstsunaudiomixeroptions.c:127
 msgid "SunVTS Loopback"
 msgstr "Повратна петља СанВТС-а"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:69
 msgid "Volume"
 msgstr "Јачина звука"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:70
 msgid "Gain"
 msgstr "Појачање"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:71
 msgid "Monitor"
 msgstr "Праћење"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:72
 msgid "Built-in Speaker"
 msgstr "Уграђени звучник"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:73
 msgid "Headphone"
 msgstr "Слушалице"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:74
 msgid "Line Out"
 msgstr "Линијски излаз"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:75
 msgid "SPDIF Out"
 msgstr "СПДИФ излаз"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:76
 msgid "AUX 1 Out"
 msgstr "АУХ 1 излаз"
 
-#: sys/sunaudio/gstsunaudiomixertrack.c:77
 msgid "AUX 2 Out"
 msgstr "АУХ 2 излаз"
 
-#: sys/v4l2/gstv4l2bufferpool.c:1672
 #, c-format
 msgid "Error reading %d bytes from device '%s'."
 msgstr "Грешка приликом читања %d бајтова са уређаја „%s“."
 
-#: sys/v4l2/gstv4l2object.c:1085
 #, c-format
 msgid "Failed to enumerate possible video formats device '%s' can work with"
-msgstr "Нисам успео да нумеришем могући уређај записа снимка „%s“ са којим може да ради"
+msgstr ""
+"Нисам успео да нумеришем могући уређај записа снимка „%s“ са којим може да "
+"ради"
 
-#: sys/v4l2/gstv4l2object.c:2577
 #, c-format
 msgid "Could not map buffers from device '%s'"
 msgstr "Не могу да мапирам помоћне меморије са уређаја „%s“"
 
-#: sys/v4l2/gstv4l2object.c:2585
 #, c-format
 msgid "The driver of device '%s' does not support the IO method %d"
 msgstr "Управљачки програм уређаја „%s“ не подржава УИ начин %d"
 
-#: sys/v4l2/gstv4l2object.c:2592
 #, c-format
 msgid "The driver of device '%s' does not support any known IO method."
 msgstr "Управљачки програм уређаја „%s“ не подржава ниједан познати УИ начин."
 
-#: sys/v4l2/gstv4l2object.c:3214 sys/v4l2/gstv4l2object.c:3225
 #, c-format
 msgid "Device '%s' is busy"
 msgstr "Уређај „%s“ је заузет"
 
-#: sys/v4l2/gstv4l2object.c:3231 sys/v4l2/gstv4l2object.c:3243
 #, c-format
 msgid "Device '%s' cannot capture at %dx%d"
 msgstr "Уређај „%s“ не може да снима на %dx%d"
 
-#: sys/v4l2/gstv4l2object.c:3254
 #, c-format
 msgid "Device '%s' cannot capture in the specified format"
 msgstr "Уређај „%s“ не може да снима у наведеном запису"
 
-#: sys/v4l2/gstv4l2object.c:3267
 #, c-format
 msgid "Device '%s' does support non-contiguous planes"
 msgstr "Уређај „%s“ не подржава не-непрекидне равни"
 
-#: sys/v4l2/gstv4l2object.c:3278
 #, c-format
 msgid "Could not get parameters on device '%s'"
 msgstr "Не могу да добавим параметре на уређају „%s“"
 
-#: sys/v4l2/gstv4l2object.c:3286
 msgid "Video device did not accept new frame rate setting."
 msgstr "Видео уређај не прихвата нове поставке протока кадрова."
 
-#: sys/v4l2/gstv4l2object.c:3391
 msgid "Video device did not provide output format."
 msgstr "Видео уређај не обезбеђује излазни запис."
 
-#: sys/v4l2/gstv4l2object.c:3397
 msgid "Video device returned invalid dimensions."
 msgstr "Видео уређај је вратио неисправне димензије."
 
-#: sys/v4l2/gstv4l2object.c:3405
 msgid "Video devices uses an unsupported interlacing method."
 msgstr "Видео уређаји користе неподржани метод преплитања."
 
-#: sys/v4l2/gstv4l2object.c:3412
 msgid "Video devices uses an unsupported pixel format."
 msgstr "Видео уређаји користе неподржани запис сличице."
 
-#: sys/v4l2/gstv4l2object.c:3824
 msgid "Failed to configure internal buffer pool."
 msgstr "Нисам успео да подесим унутрашњи смештај међумеморије."
 
-#: sys/v4l2/gstv4l2object.c:3830
 msgid "Video device did not suggest any buffer size."
 msgstr "Видео уређај не предлаже величину међумеморије."
 
-#: sys/v4l2/gstv4l2object.c:3845
 msgid "No downstream pool to import from."
 msgstr "Нема смештаја доњег тока из кога увести."
 
-#: sys/v4l2/gstv4l2radio.c:138
 #, c-format
 msgid "Failed to get settings of tuner %d on device '%s'."
 msgstr "Нисам успео да добавим подешавања тјунера %d на уређају „%s“."
 
-#: sys/v4l2/gstv4l2radio.c:145
 #, c-format
 msgid "Error getting capabilities for device '%s'."
 msgstr "Грешка добављања могућности за уређај „%s“."
 
-#: sys/v4l2/gstv4l2radio.c:152
 #, c-format
 msgid "Device '%s' is not a tuner."
 msgstr "Уређај „%s“ није тјунер."
 
-#: sys/v4l2/gstv4l2radio.c:179
 #, c-format
 msgid "Failed to get radio input on device '%s'. "
 msgstr "Нисам успео да добавим радио улаз на уређају „%s“."
 
-#: sys/v4l2/gstv4l2radio.c:202 sys/v4l2/v4l2_calls.c:1067
 #, c-format
 msgid "Failed to set input %d on device %s."
 msgstr "Нисам успео да подесим улаз %d на уређају %s."
 
-#: sys/v4l2/gstv4l2radio.c:236
 #, c-format
 msgid "Failed to change mute state for device '%s'."
 msgstr "Нисам успео да изменим стање утишаности за уређај „%s“."
 
-#: sys/v4l2/gstv4l2sink.c:615
 msgid "Failed to allocated required memory."
 msgstr "Нисам успео да доделим затражену меморију."
 
-#: sys/v4l2/gstv4l2src.c:510 sys/v4l2/gstv4l2videodec.c:581
 msgid "Failed to allocate required memory."
 msgstr "Нисам успео да доделим затражену меморију."
 
-#: sys/v4l2/gstv4l2transform.c:143
 #, c-format
 msgid "Converter on device %s has no supported input format"
 msgstr "Претварач на уређају „%s“ нема подржани улазни запис"
 
-#: sys/v4l2/gstv4l2transform.c:150
 #, c-format
 msgid "Converter on device %s has no supported output format"
 msgstr "Претварач на уређају „%s“ нема подржани излазни запис"
 
-#: sys/v4l2/gstv4l2videodec.c:141
 #, c-format
 msgid "Encoder on device %s has no supported input format"
 msgstr "Кодер на уређају „%s“ нема подржани улазни запис"
 
-#: sys/v4l2/gstv4l2videodec.c:148
 #, c-format
 msgid "Encoder on device %s has no supported output format"
 msgstr "Кодер на уређају „%s“ нема подржани излазни запис"
 
-#: sys/v4l2/gstv4l2videodec.c:595
 msgid "Failed to start decoding thread."
 msgstr "Нисам успео да покренем нит декодирања."
 
-#: sys/v4l2/gstv4l2videodec.c:603
 msgid "Failed to process frame."
 msgstr "Нисам успео да обрадим кадар."
 
-#: sys/v4l2/v4l2_calls.c:89
 #, c-format
-msgid "Error getting capabilities for device '%s': It isn't a v4l2 driver. Check if it is a v4l1 driver."
-msgstr "Грешка приликом добављања могућности за уређај „%s“: Није в4л2 управљачки програм. Проверите да ли је то в4л1 управљачки програм."
+msgid ""
+"Error getting capabilities for device '%s': It isn't a v4l2 driver. Check if "
+"it is a v4l1 driver."
+msgstr ""
+"Грешка приликом добављања могућности за уређај „%s“: Није в4л2 управљачки "
+"програм. Проверите да ли је то в4л1 управљачки програм."
 
-#: sys/v4l2/v4l2_calls.c:153
 #, c-format
 msgid "Failed to query attributes of input %d in device %s"
 msgstr "Нисам успео да пропитам својства уноса %d у уређају %s"
 
-#: sys/v4l2/v4l2_calls.c:184
 #, c-format
 msgid "Failed to get setting of tuner %d on device '%s'."
 msgstr "Нисам успео да добавим подешавања тјунера %d на уређају „%s“."
 
-#: sys/v4l2/v4l2_calls.c:232
 #, c-format
 msgid "Failed to query norm on device '%s'."
 msgstr "Нисам успео да пропитам норму на уређају „%s“."
 
-#: sys/v4l2/v4l2_calls.c:411
 #, c-format
 msgid "Failed getting controls attributes on device '%s'."
 msgstr "Нисам успео да добавим својства контрола на уређају „%s“."
 
-#: sys/v4l2/v4l2_calls.c:605
 #, c-format
 msgid "Cannot identify device '%s'."
 msgstr "Не могу да распознам уређај „%s“."
 
-#: sys/v4l2/v4l2_calls.c:612
 #, c-format
 msgid "This isn't a device '%s'."
 msgstr "Ово није уређај „%s“."
 
-#: sys/v4l2/v4l2_calls.c:619
 #, c-format
 msgid "Could not open device '%s' for reading and writing."
 msgstr "Не могу да покренем уређај „%s“ ради читања и уписа."
 
-#: sys/v4l2/v4l2_calls.c:626
 #, c-format
 msgid "Device '%s' is not a capture device."
 msgstr "Уређај „%s“ није уређај за снимање."
 
-#: sys/v4l2/v4l2_calls.c:634
 #, c-format
 msgid "Device '%s' is not a output device."
 msgstr "Уређај „%s“ није излазни уређај."
 
-#: sys/v4l2/v4l2_calls.c:642
 #, c-format
 msgid "Device '%s' is not a M2M device."
 msgstr "Уређај „%s“ није М2М уређај."
 
-#: sys/v4l2/v4l2_calls.c:693
 #, c-format
 msgid "Could not dup device '%s' for reading and writing."
 msgstr "Не могу да удвостручим уређај „%s“ ради читања и уписа."
 
-#: sys/v4l2/v4l2_calls.c:777
 #, c-format
 msgid "Failed to set norm for device '%s'."
 msgstr "Нисам успео да подесим норму за уређај „%s“."
 
-#: sys/v4l2/v4l2_calls.c:815
 #, c-format
 msgid "Failed to get current tuner frequency for device '%s'."
 msgstr "Нисам успео да добавим текућу учестаност тјунера за уређај „%s“."
 
-#: sys/v4l2/v4l2_calls.c:857
 #, c-format
 msgid "Failed to set current tuner frequency for device '%s' to %lu Hz."
-msgstr "Нисам успео да подесим текућу учестаност тјунера за уређај „%s“ на %lu Hz."
+msgstr ""
+"Нисам успео да подесим текућу учестаност тјунера за уређај „%s“ на %lu Hz."
 
-#: sys/v4l2/v4l2_calls.c:891
 #, c-format
 msgid "Failed to get signal strength for device '%s'."
 msgstr "Нисам успео да добавим јачину сигнала за уређај „%s“."
 
-#: sys/v4l2/v4l2_calls.c:927
 #, c-format
 msgid "Failed to get value for control %d on device '%s'."
 msgstr "Нисам успео да добавим вредност за контролу %d на уређају „%s“."
 
-#: sys/v4l2/v4l2_calls.c:962
 #, c-format
 msgid "Failed to set value %d for control %d on device '%s'."
 msgstr "Нисам успео да подесим вредност %d за контролу %d на уређају „%s“."
 
-#: sys/v4l2/v4l2_calls.c:1042
 #, c-format
 msgid "Failed to get current input on device '%s'. May be it is a radio device"
-msgstr "Нисам успео да добавим текући улаз на уређају „%s“. Можда је то радио уређај."
+msgstr ""
+"Нисам успео да добавим текући улаз на уређају „%s“. Можда је то радио уређај."
 
-#: sys/v4l2/v4l2_calls.c:1099
 #, c-format
-msgid "Failed to get current output on device '%s'. May be it is a radio device"
-msgstr "Нисам успео да добавим текући излаз на уређају „%s“. Можда је то радио уређај."
+msgid ""
+"Failed to get current output on device '%s'. May be it is a radio device"
+msgstr ""
+"Нисам успео да добавим текући излаз на уређају „%s“. Можда је то радио "
+"уређај."
 
-#: sys/v4l2/v4l2_calls.c:1124
 #, c-format
 msgid "Failed to set output %d on device %s."
 msgstr "Нисам успео да подесим излаз %d на уређају %s."
 
-#: sys/ximage/gstximagesrc.c:828
 msgid "Changing resolution at runtime is not yet supported."
 msgstr "Промена резолуције приликом извршавања још увек није подржана."
 
-#: sys/ximage/gstximagesrc.c:842
 msgid "Cannot operate without a clock"
 msgstr "Не могу да радим без сата"
 
